--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="description" content="Unisciti alla nostra iniziativa per combattere bullismo e cyberbullismo." />
   <meta name="keywords" content="bullismo, cyberbullismo, aiuto, supporto, inclusione" />
   <meta name="author" content="Iniziativa Anti-Bullismo" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Iniziativa Anti-Bullismo</title>
   <link rel="stylesheet" href="style.css" />
   <script src="index.js" defer></script>
