--- a/supporto.html
+++ b/supporto.html
@@ -9,6 +9,7 @@
   <meta name="description" content="Hai bisogno di aiuto? Qui trovi numeri utili, consigli pratici e risorse per affrontare il bullismo in ogni sua forma." />
   <meta name="keywords" content="supporto bullismo, aiuto, emergenza, vittime, testimoni, genitori, insegnanti" />
   <meta name="author" content="Iniziativa Anti-Bullismo" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="img/STOPALBULLISMO.png" type="image/x-icon" />
 </head>
 <body>
