--- a/guide.html
+++ b/guide.html
@@ -9,6 +9,7 @@
     <meta name="description" content="Scopri la nostra missione, il team e i valori che guidano l'Iniziativa Anti-Bullismo. Insieme per un futuro senza bullismo." />
   <meta name="keywords" content="anti-bullismo, missione, team, valori, supporto, sicurezza, inclusione" />
   <meta name="author" content="Iniziativa Anti-Bullismo" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="img/STOPALBULLISMO.png" type="image/x-icon" />
 </head>
 <body>
