--- a/chisiamo.html
+++ b/chisiamo.html
@@ -9,6 +9,7 @@
   <meta name="description" content="Conosci chi siamo, cosa facciamo e perché. Unisciti a noi contro il bullismo." />
   <meta name="keywords" content="chi siamo, anti-bullismo, missione, valori, supporto" />
   <meta name="author" content="Iniziativa Anti-Bullismo" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="img/STOPALBULLISMO.png" type="image/x-icon" />
 </head>
 <body>
