--- a/articoli.html
+++ b/articoli.html
@@ -9,6 +9,7 @@
   <meta name="description" content="Approfondimenti e riflessioni sul bullismo. Informazioni utili, storie vere e risorse per chi vuole capire e agire." />
   <meta name="keywords" content="bullismo, storie, prevenzione, scuola, giovani" />
   <meta name="author" content="Iniziativa Anti-Bullismo" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="img/STOPALBULLISMO.png" type="image/x-icon" />
 </head>
 <body>
