--- a/guide.html
+++ b/guide.html
@@ -40,9 +40,9 @@
 
       <!-- STUDENTI -->
       <div class="category-card" style="border: 2px solid #333; padding: 20px; margin-bottom: 30px; border-radius: 12px; display: flex; gap: 30px;">
-        <div style="flex: 1; min-width: 150px; background-color: #eee; border-radius: 10px; display: flex; align-items: center; justify-content: center;">
-          <!-- Placeholder for image/icon -->
-          <p style="color: #666; font-style: italic;">[Immagine Studenti]</p>
+  <div style="flex: 1; min-width: 150px; background-color: #eee; border-radius: 10px; display: flex; align-items: center; justify-content: center;">
+    <img src="student.jpg" alt="Studenti" style="max-width: 100%; border-radius: 10px;" />
+  </div>
         </div>
 
         <div style="flex: 3;">
@@ -112,10 +112,9 @@
 
       <!-- GENITORI -->
       <div class="category-card" style="border: 2px solid #333; padding: 20px; margin-bottom: 30px; border-radius: 12px; display: flex; gap: 30px;">
-        <div style="flex: 1; min-width: 150px; background-color: #eee; border-radius: 10px; display: flex; align-items: center; justify-content: center;">
-          <!-- Placeholder for image/icon -->
-          <p style="color: #666; font-style: italic;">[Immagine Genitori]</p>
-        </div>
+  <div style="flex: 1; min-width: 150px; background-color: #eee; border-radius: 10px; display: flex; align-items: center; justify-content: center;">
+    <img src="genitori.jpeg" alt="Genitori" style="max-width: 100%; border-radius: 10px;" />
+  </div>
 
         <div style="flex: 3;">
           <h3>Genitori</h3>
@@ -185,10 +184,9 @@
 
       <!-- INSEGNANTI -->
       <div class="category-card" style="border: 2px solid #333; padding: 20px; margin-bottom: 30px; border-radius: 12px; display: flex; gap: 30px;">
-        <div style="flex: 1; min-width: 150px; background-color: #eee; border-radius: 10px; display: flex; align-items: center; justify-content: center;">
-          <!-- Placeholder for image/icon -->
-          <p style="color: #666; font-style: italic;">[Immagine Insegnanti]</p>
-        </div>
+  <div style="flex: 1; min-width: 150px; background-color: #eee; border-radius: 10px; display: flex; align-items: center; justify-content: center;">
+    <img src="teacher.jpeg" alt="Insegnanti" style="max-width: 100%; border-radius: 10px;" />
+  </div>
 
         <div style="flex: 3;">
           <h3>Insegnanti</h3>
