--- a/guide.html
+++ b/guide.html
@@ -3,277 +3,136 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Guide per Categoria</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
-      background: #f9f9f9;
-      color: #333;
-    }
-    h2 {
-      text-align: center;
-      margin-bottom: 30px;
-    }
-    .guides-categories {
-      max-width: 1200px;
-      margin: 0 auto;
-    }
-    .category-cards {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 30px;
-      justify-content: center;
-    }
-    .category-card {
-      display: flex;
-      background: white;
-      border-radius: 12px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      padding: 20px;
-      width: 100%;
-      max-width: 1100px;
-      gap: 20px;
-      flex-wrap: wrap;
-    }
-    .category-card > div:first-child {
-      flex: 1 1 150px;
-      min-width: 150px;
-      height: 150px;
-      background-color: #eee;
-      border-radius: 10px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      overflow: hidden;
-    }
-    .category-card > div:first-child img {
-      max-width: 100%;
-      max-height: 100%;
-      object-fit: contain;
-      border-radius: 10px;
-    }
-    .category-card > div:nth-child(2) {
-      flex: 3 1 500px;
-      min-width: 300px;
-    }
-    .category-card h3 {
-      margin-top: 0;
-      margin-bottom: 15px;
-      color: #0066cc;
-    }
-    article {
-      margin-bottom: 25px;
-    }
-    article h4 {
-      margin-bottom: 10px;
-      color: #004a99;
-    }
-    article p {
-      margin: 8px 0;
-      line-height: 1.4;
-    }
-    ul {
-      margin: 10px 0 10px 20px;
-      list-style-type: disc;
-      color: #555;
-    }
-    ul li {
-      margin-bottom: 6px;
-    }
-
-    /* Responsive */
-    @media (max-width: 900px) {
-      .category-card {
-        flex-direction: column;
-        align-items: center;
-      }
-      .category-card > div:nth-child(2) {
-        min-width: 100%;
-      }
-    }
-  </style>
+  <title>Guide Pratiche - Iniziativa Anti-Bullismo</title>
+  <link rel="stylesheet" href="style.css" />
+  <meta name="description" content="Scopri la nostra missione, il team e i valori che guidano l'Iniziativa Anti-Bullismo. Insieme per un futuro senza bullismo." />
+  <meta name="keywords" content="anti-bullismo, missione, team, valori, supporto, sicurezza, inclusione" />
+  <meta name="author" content="Iniziativa Anti-Bullismo" />
+  <link rel="icon" href="img/STOPALBULLISMO.png" type="image/x-icon" />
 </head>
 <body>
-  <section class="guides-categories">
-    <h2>Guide per Categoria</h2>
-
-    <div class="category-cards">
-
-      <div class="category-card">
-        <div>
-          <img src="student.jpg" alt="Studenti" />
-        </div>
-
-        <div>
-          <h3>Studenti</h3>
-
-          <article>
-            <h4>Come difendersi dal bullismo</h4>
-            <p>
-              Il bullismo può manifestarsi in molte forme, dal fisico al verbale, fino a quello psicologico. Imparare a difendersi significa innanzitutto riconoscere i segnali e adottare strategie efficaci per proteggersi. 
-            </p>
-            <p>Alcuni metodi fondamentali includono:</p>
-            <ul>
-              <li>Mantenere la calma e non rispondere con violenza.</li>
-              <li>Parlare con una persona di fiducia come insegnanti, genitori o amici.</li>
-              <li>Costruire autostima e fiducia in se stessi con attività che valorizzano le proprie capacità.</li>
-              <li>Evita situazioni a rischio quando possibile e cerca supporto.</li>
-            </ul>
-            <p>Ricorda che chiedere aiuto non è mai un segno di debolezza, ma di coraggio.</p>
-          </article>
-
-          <article>
-            <h4>Guida al cyberbullismo per ragazzi</h4>
-            <p>
-              Il cyberbullismo si verifica attraverso mezzi digitali come social network, messaggi, email o forum. Spesso è più subdolo perché può accadere 24 ore su 24, raggiungendo le vittime anche a casa.
-            </p>
-            <p>Ecco alcuni consigli pratici per proteggersi:</p>
-            <ul>
-              <li>Impostare sempre la privacy dei profili social al massimo livello.</li>
-              <li>Non condividere informazioni personali o foto compromettenti.</li>
-              <li>Bloccare e segnalare utenti molesti sulle piattaforme digitali.</li>
-              <li>Conservare prove come screenshot per eventuali segnalazioni.</li>
-              <li>Parlare con adulti di fiducia se si ricevono messaggi minacciosi o offensivi.</li>
-            </ul>
-            <p>La consapevolezza digitale è la tua migliore arma contro il cyberbullismo.</p>
-          </article>
-
-          <article>
-            <h4>Diventare un alleato: guida per bystanders</h4>
-            <p>
-              Spesso chi assiste a episodi di bullismo si sente impotente o ha paura di intervenire. Questa guida ti mostra come diventare un vero alleato, aiutando la vittima senza esporre te stesso a rischi.
-            </p>
-            <p>Strategie efficaci per bystanders:</p>
-            <ul>
-              <li>Intervenire con calma e fermezza se ti senti sicuro.</li>
-              <li>Distrarre l’aggressore per interrompere il comportamento.</li>
-              <li>Offrire supporto alla vittima dopo l’episodio, anche solo ascoltandola.</li>
-              <li>Segnalare il problema a un adulto o autorità scolastica.</li>
-              <li>Creare un ambiente inclusivo e rispettoso per prevenire futuri casi.</li>
-            </ul>
-            <p>Essere un alleato significa scegliere di fare la cosa giusta, anche quando è difficile.</p>
-          </article>
-        </div>
-      </div>
-
-      <div class="category-card">
-        <div>
-          <img src="genitori.jpeg" alt="Genitori" />
-        </div>
-
-        <div>
-          <h3>Genitori</h3>
-
-          <article>
-            <h4>Riconoscere i segnali: checklist per genitori</h4>
-            <p>
-              I genitori sono spesso la prima linea di difesa contro il bullismo. È importante osservare cambiamenti nel comportamento dei figli, che possono indicare un problema.
-            </p>
-            <p>Segnali comuni includono:</p>
-            <ul>
-              <li>Improvvisi cali di rendimento scolastico.</li>
-              <li>Isolamento sociale o evitamento di determinate situazioni.</li>
-              <li>Segni fisici inspiegabili come lividi o graffi.</li>
-              <li>Cambiamenti nell’umore, ansia o tristezza persistente.</li>
-              <li>Perdita di interesse per attività un tempo amate.</li>
-            </ul>
-            <p>Tenere un dialogo aperto e non giudicante è fondamentale per far sentire il figlio ascoltato e protetto.</p>
-          </article>
-
-          <article>
-            <h4>Come parlare con la scuola</h4>
-            <p>
-              Collaborare con la scuola è un passo cruciale per risolvere situazioni di bullismo. La comunicazione deve essere chiara, rispettosa e orientata alla soluzione.
-            </p>
-            <p>Ecco come procedere:</p>
-            <ul>
-              <li>Fissare un incontro con insegnanti, responsabili o counselor scolastici.</li>
-              <li>Portare esempi concreti di episodi o segnali di bullismo.</li>
-              <li>Chiedere informazioni sui protocolli anti-bullismo adottati dalla scuola.</li>
-              <li>Proporre una collaborazione attiva per monitorare la situazione.</li>
-              <li>Richiedere un piano di intervento chiaro e condiviso.</li>
-            </ul>
-            <p>Il dialogo costruttivo tra famiglia e scuola è fondamentale per proteggere il benessere del ragazzo.</p>
-          </article>
-
-          <article>
-            <h4>Supporto emotivo a figli vittime di bullismo</h4>
-            <p>
-              Il bullismo può lasciare ferite emotive profonde. I genitori devono offrire un ambiente sicuro, empatico e di sostegno.
-            </p>
-            <p>Suggerimenti per supportare i figli:</p>
-            <ul>
-              <li>Ascoltare senza giudicare, lasciando che esprimano i propri sentimenti.</li>
-              <li>Validare le emozioni, spiegando che non sono soli.</li>
-              <li>Incoraggiare attività che favoriscano l’autostima e la socializzazione.</li>
-              <li>Se necessario, rivolgersi a professionisti come psicologi o counselor.</li>
-              <li>Monitorare i progressi e mantenere un contatto costante.</li>
-            </ul>
-            <p>Il sostegno familiare è un pilastro essenziale nel percorso di guarigione.</p>
-          </article>
-        </div>
-      </div>
-
-      <div class="category-card">
-        <div>
-          <img src="teacher.jpeg" alt="Insegnanti" />
-        </div>
-
-        <div>
-          <h3>Insegnanti</h3>
-
-          <article>
-            <h4>Strategie didattiche per prevenire il bullismo</h4>
-            <p>
-              Gli insegnanti svolgono un ruolo chiave nella prevenzione del bullismo attraverso attività educative e la creazione di un clima scolastico positivo.
-            </p>
-            <p>Consigli pratici:</p>
-            <ul>
-              <li>Includere lezioni sul rispetto, l’empatia e la diversità nel programma scolastico.</li>
-              <li>Favorire attività di gruppo che promuovano la collaborazione e l’inclusione.</li>
-              <li>Riconoscere e valorizzare i comportamenti positivi tra studenti.</li>
-              <li>Essere modelli di comportamento rispettoso e assertivo.</li>
-              <li>Creare un canale aperto di comunicazione con studenti e famiglie.</li>
-            </ul>
-            <p>Un ambiente scolastico sano è la miglior difesa contro il bullismo.</p>
-          </article>
-
-          <article>
-            <h4>Gestire episodi di bullismo in classe</h4>
-            <p>
-              Quando si verificano episodi di bullismo, è fondamentale agire prontamente e con decisione.
-            </p>
-            <p>Linee guida:</p>
-            <ul>
-              <li>Intervenire immediatamente per fermare il comportamento.</li>
-              <li>Ascoltare tutte le parti coinvolte senza pregiudizi.</li>
-              <li>Applicare le regole scolastiche in modo coerente.</li>
-              <li>Coinvolgere il supporto della dirigenza e del personale specializzato.</li>
-              <li>Seguire un percorso di recupero per vittima e aggressore.</li>
-            </ul>
-            <p>La gestione tempestiva è essenziale per evitare che il problema si aggravi.</p>
-          </article>
-
-          <article>
-            <h4>Creare un ambiente scolastico inclusivo</h4>
-            <p>
-              La prevenzione del bullismo passa anche dalla promozione di un clima inclusivo e rispettoso.
-            </p>
-            <p>Azioni utili:</p>
-            <ul>
-              <li>Organizzare eventi e workshop su temi di inclusione e diversità.</li>
-              <li>Incoraggiare la partecipazione di tutti gli studenti nelle attività scolastiche.</li>
-              <li>Collaborare con associazioni e enti locali per programmi anti-bullismo.</li>
-              <li>Promuovere la cultura della solidarietà e del rispetto reciproco.</li>
-              <li>Monitorare costantemente l’atmosfera in classe e intervenire precocemente.</li>
-            </ul>
-            <p>Un ambiente inclusivo favorisce il benessere e la crescita di ogni studente.</p>
-          </article>
-        </div>
-      </div>
-
+  <div class="banner">
+    <div class="navbar">
+      <img src="img/title.png" alt="Logo" class="logo" />
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="articoli.html">Articoli</a></li>
+        <li><a href="supporto.html">Supporto</a></li>
+        <li><a href="contatti.html">Contatti</a></li>
+        <li><a href="chisiamo.html">Chi Siamo</a></li>
+        <li><a href="guide.html" class="active">Guide Pratiche</a></li>
+      </ul>
     </div>
-  </section>
+
+    <div class="content" style="position: static; max-width: 900px; margin: 40px auto 80px auto; text-align: left;">
+      <h1>Guide Pratiche</h1>
+      <p>Benvenuto nella sezione dedicata alle guide pratiche contro il bullismo. Qui troverai informazioni approfondite, strategie efficaci e risorse utili per prevenire e affrontare ogni forma di bullismo, sia a scuola che online.</p>
+
+      <section style="margin-top: 40px;">
+        <h2>Cos'è il Bullismo?</h2>
+        <p>Il bullismo è un insieme di comportamenti aggressivi, intenzionali e ripetuti nel tempo, che mirano a danneggiare fisicamente, verbalmente o psicologicamente una persona o un gruppo considerato più debole.</p>
+        <p>Può manifestarsi in molte forme, tra cui:</p>
+        <ul>
+          <li><strong>Bullismo fisico:</strong> spinte, pugni, schiaffi, danneggiamenti a oggetti personali.</li>
+          <li><strong>Bullismo verbale:</strong> insulti, minacce, prese in giro, diffusione di voci false.</li>
+          <li><strong>Bullismo psicologico:</strong> esclusione sociale, isolamento, intimidazioni silenziose.</li>
+          <li><strong>Cyberbullismo:</strong> molestie e attacchi tramite social media, messaggi, email e chat.</li>
+        </ul>
+      </section>
+
+      <section style="margin-top: 40px;">
+        <h2>Perché è importante intervenire?</h2>
+        <p>Il bullismo può causare gravi conseguenze a livello emotivo, psicologico e sociale. Le vittime spesso soffrono di ansia, depressione, perdita di autostima e isolamento. Intervenire tempestivamente permette di proteggere le persone vulnerabili e costruire ambienti più sicuri e inclusivi.</p>
+      </section>
+
+      <section style="margin-top: 40px;">
+        <h2>Come Prevenire il Bullismo</h2>
+        <p>La prevenzione è la chiave per combattere il bullismo. Ecco alcune strategie fondamentali:</p>
+        <ul>
+          <li><strong>Promuovere il rispetto:</strong> insegnare ai giovani a rispettare le differenze e a valorizzare la diversità.</li>
+          <li><strong>Educare all’empatia:</strong> incoraggiare la capacità di mettersi nei panni degli altri.</li>
+          <li><strong>Comunicazione efficace:</strong> sviluppare abilità di ascolto attivo e dialogo non violento.</li>
+          <li><strong>Coinvolgere famiglie e scuola:</strong> creare sinergie tra insegnanti, genitori e studenti.</li>
+          <li><strong>Creare ambienti inclusivi:</strong> favorire attività che uniscano e coinvolgano tutti.</li>
+          <li><strong>Regole chiare:</strong> stabilire e far rispettare norme anti-bullismo condivise.</li>
+        </ul>
+      </section>
+
+      <section style="margin-top: 40px;">
+        <h2>Come Riconoscere i Segnali del Bullismo</h2>
+        <p>Riconoscere in tempo i segnali permette di agire prima che la situazione peggiori. Tra i segnali più comuni ci sono:</p>
+        <ul>
+          <li>Modifiche improvvise nel comportamento o umore della vittima.</li>
+          <li>Paura o riluttanza ad andare a scuola o in certi luoghi.</li>
+          <li>Danni a vestiti o oggetti personali senza spiegazioni.</li>
+          <li>Isolamento sociale o perdita di amici.</li>
+          <li>Segni fisici di aggressioni.</li>
+        </ul>
+      </section>
+
+      <section style="margin-top: 40px;">
+        <h2>Come Affrontare il Bullismo</h2>
+        <p>Se sei vittima o testimone di bullismo, ecco cosa fare:</p>
+        <ul>
+          <li><strong>Non ignorare:</strong> parlare apertamente del problema con persone di fiducia.</li>
+          <li><strong>Cercare supporto:</strong> rivolgersi a insegnanti, genitori o professionisti.</li>
+          <li><strong>Documentare gli episodi:</strong> annotare date, orari, luoghi e persone coinvolte.</li>
+          <li><strong>Non rispondere con violenza:</strong> mantenere la calma e cercare soluzioni pacifiche.</li>
+          <li><strong>Utilizzare risorse online e locali:</strong> servizi di supporto, hotline e gruppi di aiuto.</li>
+        </ul>
+      </section>
+
+      <section style="margin-top: 40px;">
+        <h2>Risorse Utili</h2>
+        <p>Qui trovi alcuni riferimenti importanti a cui rivolgerti per ottenere aiuto e informazioni:</p>
+        <ul>
+          <li><a href="https://www.telefonoazzurro.it" target="_blank" rel="noopener noreferrer">Telefono Azzurro</a> - Supporto ai bambini e adolescenti in difficoltà.</li>
+          <li><a href="https://www.serviziopsicologiconline.it" target="_blank" rel="noopener noreferrer">Supporto Psicologico Online</a> - Aiuto professionale e riservato.</li>
+          <li><a href="https://www.anticyberbullismo.it" target="_blank" rel="noopener noreferrer">Anti-Cyberbullismo</a> - Risorse per combattere il bullismo online.</li>
+          <li><a href="https://www.bullying.org" target="_blank" rel="noopener noreferrer">Bullying.org</a> - Informazioni e guide dettagliate in inglese.</li>
+          <li><a href="https://www.unicef.it" target="_blank" rel="noopener noreferrer">UNICEF Italia</a> - Campagne e materiali educativi.</li>
+        </ul>
+      </section>
+
+      <section style="margin-top: 40px;">
+        <h2>FAQ - Domande Frequenti</h2>
+        <div class="faq-item">
+          <h3>Come posso aiutare un amico che subisce bullismo?</h3>
+          <p>Mostra supporto e ascolto senza giudicare. Incoraggialo a parlare con adulti di fiducia e, se necessario, accompagnalo a chiedere aiuto.</p>
+        </div>
+        <div class="faq-item">
+          <h3>È normale avere paura di denunciare?</h3>
+          <p>Sì, è una reazione comune. Ricorda però che chiedere aiuto è importante per fermare il problema e proteggerti.</p>
+        </div>
+        <div class="faq-item">
+          <h3>Cosa fare se sono testimone di bullismo?</h3>
+          <p>Non restare in silenzio. Cerca di intervenire in modo sicuro o informa un adulto di fiducia. Il tuo supporto può fare la differenza.</p>
+        </div>
+      </section>
+
+      <section style="margin-top: 40px;">
+        <h2>Conclusioni</h2>
+        <p>Il bullismo è una piaga sociale che possiamo sconfiggere solo con l’impegno di tutti: scuole, famiglie, istituzioni e singoli individui. Informarsi, prevenire e agire sono i passi fondamentali per costruire un futuro in cui ogni persona si senta al sicuro, rispettata e valorizzata.</p>
+        <p>Grazie per essere parte di questa iniziativa!</p>
+      </section>
+    </div>
+
+    <button id="scrollTopBtn" title="Torna su">↑</button>
+  </div>
+
+  <script>
+    // Scroll to top button functionality
+    const scrollTopBtn = document.getElementById('scrollTopBtn');
+    window.onscroll = function() {
+      if (document.body.scrollTop > 300 || document.documentElement.scrollTop > 300) {
+        scrollTopBtn.style.display = "block";
+      } else {
+        scrollTopBtn.style.display = "none";
+      }
+    };
+    scrollTopBtn.addEventListener('click', () => {
+      window.scrollTo({top: 0, behavior: 'smooth'});
+    });
+  </script>
 </body>
 </html>
