--- a/supporto.html
+++ b/supporto.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Supporto | Iniziativa Anti-Bullismo</title>
+  <title>Supporto e Risorse | Iniziativa Anti-Bullismo</title>
   <link rel="stylesheet" href="style.css" />
   <script src="index.js" defer></script>
-  <meta name="description" content="Hai bisogno di aiuto? Qui trovi numeri utili, consigli pratici e risorse per affrontare il bullismo in ogni sua forma." />
-  <meta name="keywords" content="supporto bullismo, aiuto, emergenza, vittime, testimoni, genitori, insegnanti" />
+  <meta name="description" content="Risorse complete di supporto contro il bullismo per vittime, testimoni, genitori e insegnanti. Consigli pratici, numeri utili e strategie di intervento." />
+  <meta name="keywords" content="bullismo, supporto, vittime, genitori, insegnanti, prevenzione, cyberbullismo, aiuto" />
   <meta name="author" content="Iniziativa Anti-Bullismo" />
   <link rel="icon" href="img/STOPALBULLISMO.png" type="image/x-icon" />
 </head>
@@ -28,105 +28,215 @@
     </nav>
   </header>
 
-  <main class="support-container fade-in">
-    <section class="emergency" aria-labelledby="emergency-title">
-      <h2 id="emergency-title">In Caso di Emergenza</h2>
-      <div class="emergency-content">
-        <article class="emergency-card" aria-label="Emergenza generale">
-          <h3>Hai bisogno di aiuto subito?</h3>
-          <p>Chiama il <strong>112</strong> o il <strong>113</strong> — rispondono 24 ore su 24, ogni giorno dell'anno.</p>
-          <p>Questi numeri sono i più rapidi per ricevere assistenza immediata dalle forze dell'ordine o dai servizi di emergenza.</p>
-        </article>
-        <article class="emergency-card urgent" aria-label="Linea Anti-Bullismo">
-          <h3>Linea Anti-Bullismo</h3>
-          <p><strong>800 123 456</strong> – Numero gratuito e sempre attivo per supporto e consulenza.</p>
-          <p>La linea offre ascolto, consigli pratici e indicazioni su come procedere in caso di bullismo.</p>
-          <p>È possibile anche accedere a una chat online direttamente dal nostro sito per comunicare in modo discreto e immediato.</p>
-        </article>
-      </div>
+  <main class="support-container fade-in" tabindex="0">
+    <h1>Supporto e Risorse Contro il Bullismo</h1>
+    <p>
+      Il bullismo è un fenomeno che può avere gravi ripercussioni sulla vita delle persone coinvolte,
+      sia vittime che testimoni. Questa pagina offre una guida completa per affrontare, riconoscere e contrastare il bullismo
+      in tutte le sue forme, fornendo strumenti utili e informazioni aggiornate per vittime, genitori, testimoni e insegnanti.
+    </p>
+
+    <section aria-labelledby="section-bullying-overview">
+      <h2 id="section-bullying-overview">Che cos’è il bullismo?</h2>
+      <p>
+        Il bullismo è un comportamento aggressivo e intenzionale che si manifesta ripetutamente nel tempo
+        e si caratterizza per uno squilibrio di potere tra chi agisce e chi subisce. Può assumere diverse forme,
+        dalla violenza fisica e verbale a quella psicologica, fino al cyberbullismo che avviene attraverso mezzi digitali.
+      </p>
+      <p>
+        Tra i tipi più comuni di bullismo troviamo:
+      </p>
+      <ul>
+        <li><strong>Bullismo fisico:</strong> calci, pugni, spinte, danneggiamento di oggetti personali.</li>
+        <li><strong>Bullismo verbale:</strong> insulti, prese in giro, minacce, diffamazione.</li>
+        <li><strong>Bullismo sociale o relazionale:</strong> esclusione, diffusione di pettegolezzi, isolamento.</li>
+        <li><strong>Cyberbullismo:</strong> molestie, insulti o minacce attraverso social network, messaggi, video o foto.</li>
+      </ul>
+      <p>
+        Il bullismo può colpire chiunque, indipendentemente dall’età, dal genere, dall’origine o dalla condizione sociale,
+        e spesso porta a conseguenze psicologiche e fisiche significative, anche a lungo termine.
+      </p>
     </section>
 
-    <section class="resources" aria-label="Consigli e supporto">
-      <h2>Come Possiamo Aiutarti</h2>
+    <section aria-labelledby="section-victims" class="victims-section">
+      <h2 id="section-victims">Se sei vittima di bullismo</h2>
+      <p>
+        Riconoscere di essere vittima di bullismo è il primo passo per chiedere aiuto e iniziare un percorso di uscita da questa situazione.
+        Non devi mai sentirti solo o colpevole: il bullismo non è mai giustificato.
+      </p>
 
-      <article class="tab-content active" id="victim" tabindex="0">
-        <h3>Se sei vittima di bullismo</h3>
-        <ol>
-          <li><strong>Non restare solo:</strong> Parla con una persona di cui ti fidi, come un amico, un familiare o un insegnante. Il supporto è fondamentale.</li>
-          <li><strong>Raccogli le prove:</strong> Conserva messaggi, foto, video o qualsiasi altro elemento che possa dimostrare il comportamento molesto.</li>
-          <li><strong>Segnala l'accaduto:</strong> Rivolgiti a piattaforme online, alla scuola o alle autorità competenti per denunciare l'abuso.</li>
-          <li><strong>Chiedi aiuto professionale:</strong> Psicologi e centri di supporto possono aiutarti a superare il trauma e a costruire strategie di difesa.</li>
-          <li><strong>Ricorda:</strong> Non sei responsabile di ciò che ti accade. Hai diritto a sicurezza, rispetto e dignità.</li>
-        </ol>
-        <p>Non esitare a cercare aiuto e a proteggere il tuo benessere emotivo e fisico.</p>
-      </article>
+      <h3>Segnali che potresti essere vittima di bullismo</h3>
+      <ul>
+        <li>Ti senti spesso triste, ansioso o spaventato senza una ragione apparente.</li>
+        <li>Eviti la scuola o i luoghi dove incontri chi ti fa del male.</li>
+        <li>Hai problemi di sonno, mal di testa o altri sintomi fisici inspiegabili.</li>
+        <li>Noti cambiamenti nel tuo comportamento, come isolamento o rabbia improvvisa.</li>
+      </ul>
 
-      <article class="tab-content" id="witness" tabindex="0">
-        <h3>Se sei testimone</h3>
-        <ul>
-          <li><strong>Non restare a guardare:</strong> La tua reazione può fare la differenza nel sostenere la vittima e fermare il bullismo.</li>
-          <li><strong>Fai sentire il tuo sostegno:</strong> Un semplice "Come stai?" può aiutare chi è vittima a sentirsi meno isolato.</li>
-          <li><strong>Chiedi aiuto:</strong> Rivolgiti a un adulto di fiducia per intervenire in modo sicuro e adeguato.</li>
-          <li><strong>Distrai l'attenzione:</strong> Se ti senti sicuro, prova a cambiare il contesto o a interrompere la situazione per distogliere l'aggressore.</li>
-        </ul>
-        <p>Ricorda, la solidarietà è uno strumento potente contro il bullismo.</p>
-      </article>
+      <h3>Cosa fare concretamente</h3>
+      <ol>
+        <li><strong>Parlane con qualcuno di fiducia:</strong> un amico, un familiare o un insegnante. Spesso la condivisione alleggerisce il peso.</li>
+        <li><strong>Documenta gli episodi:</strong> conserva messaggi, fotografie o qualunque prova che possa aiutare a dimostrare il bullismo.</li>
+        <li><strong>Rivolgiti a un adulto o a un servizio specializzato:</strong> molte scuole hanno sportelli di ascolto e servizi di supporto dedicati.</li>
+        <li><strong>Evita di rispondere con violenza:</strong> mantenere la calma e cercare aiuto è più efficace e sicuro.</li>
+        <li><strong>Cerca sostegno psicologico:</strong> parlare con uno psicologo o un counselor può aiutarti a gestire lo stress e a recuperare fiducia.</li>
+      </ol>
 
-      <article class="tab-content" id="parent" tabindex="0">
-        <h3>Se sei un genitore</h3>
-        <div class="parent-signs">
-          <div class="sign">
-            <h4>Comportamenti insoliti</h4>
-            <p>Il bambino o ragazzo può mostrare paura di andare a scuola, irritabilità, isolamento o cambiamenti repentini nell'umore.</p>
-          </div>
-          <div class="sign">
-            <h4>Segnali fisici</h4>
-            <p>Attenzione a lividi frequenti, graffi, oggetti rotti o perduti senza spiegazioni.</p>
-          </div>
-          <div class="sign">
-            <h4>Emozioni fuori equilibrio</h4>
-            <p>Ansia, pianti improvvisi, difficoltà a dormire o cambiamenti nelle abitudini alimentari possono essere segnali importanti.</p>
-          </div>
-        </div>
-        <h3>Come puoi aiutarlo</h3>
-        <p><strong>1. Ascolta senza giudicare</strong> – Mostra empatia e disponibilità, facendo capire che sei al suo fianco in ogni momento.</p>
-        <p><strong>2. Parla con la scuola</strong> – Collabora con insegnanti e dirigenti per individuare soluzioni efficaci e sostenere tuo figlio.</p>
-        <p><strong>3. Cerca un esperto</strong> – Psicologi, counselor o associazioni specializzate possono offrire un supporto fondamentale.</p>
-        <p>La tua attenzione e il tuo sostegno possono fare la differenza per superare questa difficile esperienza.</p>
-      </article>
-
-      <article class="tab-content" id="educator" tabindex="0">
-        <h3>Per insegnanti ed educatori</h3>
-        <ul>
-          <li><strong>Costruisci un clima di classe sicuro:</strong> Promuovi l'inclusione e il rispetto reciproco tra gli studenti.</li>
-          <li><strong>Intervieni con chiarezza:</strong> Non sottovalutare mai segnali di disagio o episodi di bullismo.</li>
-          <li><strong>Mediazione e dialogo:</strong> Quando possibile, facilita il confronto tra le parti coinvolte in un ambiente protetto.</li>
-          <li><strong>Osserva con attenzione:</strong> A volte il disagio è silenzioso e si manifesta attraverso cambiamenti nel comportamento.</li>
-        </ul>
-        <p>Gli educatori hanno un ruolo chiave nella prevenzione e nel contrasto del bullismo.</p>
-      </article>
+      <h3>Risorse utili per le vittime</h3>
+      <p>
+        Esistono molte associazioni e numeri verdi dedicati alle vittime di bullismo, che offrono ascolto e supporto gratuito e riservato.
+        Tra queste ricordiamo:
+      </p>
+      <ul>
+        <li><strong>Telefono Azzurro:</strong> 1.96.96 – Assistenza per bambini e ragazzi.</li>
+        <li><strong>Linea Anti-Bullismo:</strong> 800 123 456 – Consulenza gratuita e attiva 24/7.</li>
+        <li><strong>Centri Antiviolenza locali:</strong> spesso offrono supporto anche a minori vittime di bullismo.</li>
+      </ul>
     </section>
 
-    <section class="external-resources" aria-label="Risorse esterne">
-      <h2>Risorse Esterne Consigliate</h2>
-      <div class="resource-cards">
-        <article class="resource-card" tabindex="0">
-          <h3>Telefono Azzurro</h3>
-          <p>Numero gratuito per bambini e ragazzi: <strong>1.96.96</strong></p>
-          <p>Offre ascolto e sostegno in situazioni di difficoltà, anche in caso di bullismo.</p>
-        </article>
-        <article class="resource-card" tabindex="0">
-          <h3>Centro Anti-Cyberbullismo</h3>
-          <p>Formazione e supporto online per affrontare il cyberbullismo.</p>
-          <p>Visita il sito: <a href="https://www.anticiberbullismo.it" target="_blank" rel="noopener noreferrer">anticiberbullismo.it</a></p>
-        </article>
-        <article class="resource-card" tabindex="0">
-          <h3>App "No Bullismo"</h3>
-          <p>Strumento per segnalazioni anonime e contatto diretto con esperti del settore.</p>
-          <p>Disponibile gratuitamente per dispositivi mobili.</p>
-        </article>
-      </div>
+    <section aria-labelledby="section-witnesses" class="witness-section">
+      <h2 id="section-witnesses">Se sei testimone di bullismo</h2>
+      <p>
+        Essere testimone di episodi di bullismo può essere difficile e spesso provoca incertezza su cosa fare.
+        Tuttavia, il tuo ruolo è fondamentale per interrompere il ciclo del bullismo.
+      </p>
+
+      <h3>Perché è importante intervenire</h3>
+      <p>
+        Ignorare il bullismo o fingere di non vedere può far sentire la vittima ancora più isolata e vulnerabile.
+        Al contrario, intervenire può dissuadere l'aggressore e dimostrare alla vittima che non è sola.
+      </p>
+
+      <h3>Come intervenire in sicurezza</h3>
+      <ul>
+        <li><strong>Mostra solidarietà:</strong> parla con la vittima e fai capire che sei al suo fianco.</li>
+        <li><strong>Distrae o interrompi la situazione:</strong> se possibile, cambia argomento o coinvolgi la vittima in un’altra attività.</li>
+        <li><strong>Segnala l’episodio a un adulto o alle autorità competenti:</strong> la scuola o i genitori possono intervenire in modo efficace.</li>
+        <li><strong>Evita di affrontare direttamente l’aggressore:</strong> se non ti senti sicuro, chiedi sempre aiuto a un adulto.</li>
+      </ul>
+
+      <h3>Risorse e programmi per testimoni</h3>
+      <p>
+        Alcune scuole e associazioni offrono corsi e laboratori per aiutare i testimoni a riconoscere il bullismo
+        e a sviluppare strategie di intervento efficaci e sicure.
+      </p>
+    </section>
+
+    <section aria-labelledby="section-parents" class="parents-section">
+      <h2 id="section-parents">Se sei un genitore</h2>
+      <p>
+        Scoprire che tuo figlio o tua figlia è vittima di bullismo può essere doloroso e stressante,
+        ma il tuo sostegno è decisivo per aiutarlo/a a superare questo momento difficile.
+      </p>
+
+      <h3>Come riconoscere che tuo figlio/a potrebbe essere vittima di bullismo</h3>
+      <ul>
+        <li>Rifiuto di andare a scuola o cambiamenti improvvisi nel rendimento scolastico.</li>
+        <li>Emotività alterata, come nervosismo, ansia, attacchi di pianto o rabbia.</li>
+        <li>Segni fisici inspiegabili, come lividi, graffi o danni ai vestiti.</li>
+        <li>Isolamento sociale o cambiamenti nei rapporti con amici e famiglia.</li>
+      </ul>
+
+      <h3>Come supportare tuo figlio/a</h3>
+      <ol>
+        <li><strong>Ascolta senza giudicare:</strong> crea uno spazio sicuro per parlare, anche se a volte è difficile.</li>
+        <li><strong>Non minimizzare il problema:</strong> riconosci la gravità della situazione e agisci con serietà.</li>
+        <li><strong>Coinvolgi la scuola:</strong> parla con insegnanti, dirigenti e counselor per trovare una soluzione condivisa.</li>
+        <li><strong>Cerca un aiuto professionale:</strong> psicologi e terapeuti possono offrire un supporto specializzato a tuo figlio/a e alla famiglia.</li>
+        <li><strong>Promuovi l'autostima:</strong> incoraggia attività in cui tuo figlio/a possa sentirsi competente e accettato/a.</li>
+      </ol>
+
+      <h3>Prevenzione e educazione</h3>
+      <p>
+        Come genitore puoi contribuire alla prevenzione del bullismo insegnando valori come il rispetto,
+        la solidarietà e la gestione positiva dei conflitti fin dalla prima infanzia.
+      </p>
+    </section>
+
+    <section aria-labelledby="section-educators" class="educators-section">
+      <h2 id="section-educators">Per insegnanti e educatori</h2>
+      <p>
+        Gli insegnanti e gli educatori giocano un ruolo chiave nella prevenzione e nel contrasto del bullismo,
+        poiché sono spesso i primi a poter individuare segnali di disagio e a intervenire tempestivamente.
+      </p>
+
+      <h3>Come riconoscere il bullismo a scuola</h3>
+      <ul>
+        <li>Conflitti frequenti tra studenti o comportamenti intimidatori.</li>
+        <li>Studenti che appaiono ansiosi, evitano certi luoghi o cambiano improvvisamente comportamento.</li>
+        <li>Segnalazioni di studenti o genitori su episodi sospetti.</li>
+      </ul>
+
+      <h3>Strategie di intervento efficaci</h3>
+      <ol>
+        <li><strong>Creare un ambiente scolastico inclusivo:</strong> promuovere il rispetto e valorizzare la diversità.</li>
+        <li><strong>Educazione emotiva e sociale:</strong> introdurre programmi che insegnino empatia, comunicazione e risoluzione dei conflitti.</li>
+        <li><strong>Coinvolgimento attivo degli studenti:</strong> incoraggiare testimoni e vittime a parlare e a cercare aiuto.</li>
+        <li><strong>Collaborazione con famiglie e professionisti:</strong> lavorare insieme per costruire un sistema di supporto efficace.</li>
+      </ol>
+
+      <h3>Formazione continua</h3>
+      <p>
+        È importante che gli educatori partecipino a corsi di formazione e aggiornamento sul bullismo,
+        per conoscere le nuove dinamiche, soprattutto legate al cyberbullismo, e le migliori pratiche di intervento.
+      </p>
+    </section>
+
+    <section aria-labelledby="section-cyberbullying" class="cyberbullying-section">
+      <h2 id="section-cyberbullying">Cyberbullismo: un pericolo crescente</h2>
+      <p>
+        Il cyberbullismo è una forma di bullismo che avviene attraverso mezzi digitali come social media, chat, messaggi e email.
+        Può avere conseguenze molto gravi perché spesso raggiunge la vittima ovunque e in qualsiasi momento,
+        rendendo difficile trovare momenti di pausa e sicurezza.
+      </p>
+
+      <h3>Come riconoscere il cyberbullismo</h3>
+      <ul>
+        <li>Messaggi minacciosi, offensivi o diffamatori.</li>
+        <li>Diffusione di foto o video imbarazzanti senza consenso.</li>
+        <li>Creazione di profili falsi o gruppi per isolare o prendere in giro qualcuno.</li>
+        <li>Esclusione o ostracismo digitale.</li>
+      </ul>
+
+      <h3>Consigli per proteggersi dal cyberbullismo</h3>
+      <ol>
+        <li><strong>Non rispondere agli aggressori:</strong> evitare di alimentare le provocazioni.</li>
+        <li><strong>Bloccare e segnalare:</strong> usare le funzioni di blocco e segnalazione offerte dalle piattaforme social.</li>
+        <li><strong>Conservare le prove:</strong> screenshot e messaggi possono essere fondamentali per denunciare.</li>
+        <li><strong>Parlare con un adulto di fiducia:</strong> non affrontare da soli la situazione.</li>
+      </ol>
+
+      <h3>Risorse per il cyberbullismo</h3>
+      <p>
+        Sono attivi numerosi servizi online di supporto e segnalazione, tra cui:
+      </p>
+      <ul>
+        <li><a href="https://www.telefonoazzurro.it" target="_blank" rel="noopener noreferrer">Telefono Azzurro</a> – Assistenza e consulenza.</li>
+        <li><a href="https://www.saferinternet.it" target="_blank" rel="noopener noreferrer">Safer Internet Centre Italia</a> – Risorse e informazioni.</li>
+        <li><a href="https://www.generazioniconnesse.it" target="_blank" rel="noopener noreferrer">Generazioni Connesse</a> – Educazione digitale e prevenzione.</li>
+      </ul>
+    </section>
+
+    <section aria-labelledby="section-final-thoughts" class="final-thoughts">
+      <h2 id="section-final-thoughts">Conclusione</h2>
+      <p>
+        Il bullismo è un problema complesso che richiede l'impegno di tutta la comunità scolastica e familiare.
+        Solo attraverso la conoscenza, la sensibilizzazione e l'azione concreta possiamo garantire ambienti sicuri e inclusivi per tutti.
+      </p>
+      <p>
+        Se tu o qualcuno che conosci siete coinvolti in situazioni di bullismo, ricordate che non siete soli.
+        Chiedere aiuto è un segno di forza e coraggio. Esistono molte risorse e persone pronte a supportarvi in ogni passo.
+      </p>
+      <p>
+        Insieme possiamo costruire una cultura di rispetto, solidarietà e ascolto.
+      </p>
     </section>
   </main>
+
+  <footer>
+    <p>
+      &copy; 2025 Iniziativa Anti-Bullismo | <a href="privacy.html">Privacy Policy</a> | <a href="contatti.html">Contatti</a>
+    </p>
+  </footer>
 </body>
 </html>
